# ortilib

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  Makefile
include/orarena/: orarena.h
include/orsound/: orsound.h
include/orwindow/: orwindow.h  orwindow_errors.h  orwindow_gamepad.h  orwindow_keyboard.h  orwindow_pointer.h
libortiarena/: Makefile
libortiarena/include/: libortiarena.h
libortiarena/src/: libortiarena.c  valloc.h  valloc_linux.c  valloc_macos.c
libortiarena/tests/: test_libortiarena.c
libortiwindow/: Makefile
libortiwindow/include/: libortiwindow.h
libortiwindow/src/: libortiwindow.c  window.h  window_linux.c  window_macos.c  window_macos.swift
libortiwindow/src/linux/: decoration.c  decoration.h  window.c  xdg-shell.c  xdg-shell.h
libortiwindow/tests/: test_libortiwindow.c
src/orarena/: CMakeLists.txt  orarena.c  valloc_internal.h
src/orarena/linux/: valloc_internal.c
src/orsound/: CMakeLists.txt  orsound.c  orsound_internal.h
src/orsound/linux/: orsound_internal.c  sound_pipewire.c  sound_pipewire.h
src/orwindow/: CMakeLists.txt  orwindow.c  orwindow_internal.h
src/orwindow/linux/: orwindow_internal.c  wayland_client.c  wayland_client.h  wayland_decorator.c  wayland_decorator.h  wayland_gamepad.c  wayland_gamepad.h  wayland_keyboard.c  wayland_keyboard.h  wayland_pointer.c  wayland_pointer.h
tests/: CMakeLists.txt
tests/orarena_tests/: orarena_test.c
tests/orsound_tests/: orsound_test.c
tests/orwindow_tests/: orwindow_test.c
